cmake_minimum_required(VERSION 3.29)
project(CppLearning)

set(CMAKE_CXX_STANDARD 20)

set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -save-temps")

set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -save-temps")

add_executable(CppLearning main.cpp
        pointer/空指针和野指针.cpp
        reference/引用的基本语法.cpp
        reference/引用注意事项.cpp
        reference/引用作为返回值.cpp
        reference/引用的本质.cpp
        reference/常量引用.cpp
        advanced_func/函数默认参数.cpp
        advanced_func/函数占位参数.cpp
        advanced_func/函数重载.cpp
        advanced_func/函数重载注意事项.cpp
        class/封装案例.cpp
        class/访问权限.cpp
        class/构造函数和析构函数.cpp
        class/拷贝构造函数.cpp
        class/深拷贝和浅拷贝.cpp
        class/初始化列表.cpp
        class/类对象作为类成员.cpp
        class/静态成员.cpp
        class/成员变量和成员函数分开存储.cpp
        class/this指针的使用.cpp
        class/空指针调用成员函数.cpp
        class/const修饰成员函数.cpp
        friend/全局函数做友元函数.cpp
        operator_overloading/加号运算符重载.cpp
        operator_overloading/左移运算符重载.cpp
        type/limits.cpp
        type/hexoct.cpp
        math_operator/exercise3.cpp
        math_operator/exercise4.cpp
        math_operator/exercise5.cpp
        string/instr1.cpp
        string/numstr.cpp
        string/instr2.cpp
        string/instr3.cpp
        string/strtype2.cpp
        string/strtype3.cpp
        string/strtype4.cpp
        struct/arrstruc.cpp
        pointer/pointer.cpp
        pointer/use_new.cpp
        pointer/ptrstr.cpp
        pointer/newstrct.cpp
        array/choices.cpp
        string/exercie1.cpp
        string/excerise3.cpp
        string/exercise4.cpp
        string/exercise5.cpp
        string/exercise7.cpp
        loop/forstr2.cpp
        loop/compstr1.cpp
        loop/compstr2.cpp
        loop/waiting.cpp
        loop/textin1.cpp
        loop/textin2.cpp
        loop/textin3.cpp
        loop/textin4.cpp
        loop/nested.cpp
        loop/exercise1.cpp
        loop/formore.cpp
        loop/exercise3.cpp
        loop/exercise4.cpp
        loop/exercise7.cpp
        loop/exercise8.cpp
        loop/exercise9.cpp
        cctype/cctypes.cpp
        switch/switch.cpp
        switch/enum.cpp
        switch/cinfish.cpp
        switch/cingolf.cpp
        file/outfile.cpp
        file/sumafile.cpp
        cctype/exercise1.cpp
        cctype/exercise2.cpp
        cctype/exercise5.cpp
        function/towarg.cpp
        function/lotto.cpp
        function/arrfun2.cpp
        function/arrfun3.cpp
        function/strgfun.cpp
        function/strgback.cpp
        function/astrctfun.cpp
        function/arrobj.cpp
        function/recur.cpp
        function/ruler.cpp
        function/fun_ptr.cpp
        function/arfupt.cpp
        function/exercise1.cpp
        function/exercise2.cpp
        function/exercise3.cpp
        function/exercise5.cpp
        function/exercise9.cpp
        function/exercise10.cpp
        function2/inline.cpp
        function2/firstref.cpp
        function2/sceref.cpp
        function2/strquote.cpp
        function2/filefunc.cpp
        function2/left.cpp
        function2/leftover.cpp
        function2/funtemp.cpp
        function2/twoswap.cpp
        function2/exercise1.cpp
        function2/exercise2.cpp
        function2/exercise3.cpp
        function2/exercise4.cpp
        function2/exercise5.cpp
        function2/exercise6.cpp
        namesp/coordin.h
        namesp/file1.cpp
        namesp/file2.cpp
        namesp/external.cpp
        namesp/support.cpp
        namesp/twofile1.cpp
        namesp/twofile2.cpp
        namesp/newplace.cpp
        namesp/namesp.h
        namesp/namesp.cpp
        namesp/usenmsp.cpp
        namesp/golf.h
        namesp/golf.cpp
        namesp/exercise3.cpp
        namesp/sales.h
        namesp/sales.cpp
        namesp/usesales.cpp
        class/stock00.h
        class/stock00.cpp
        class/usestck0.cpp
        class/stock10.h
        class/stock10.cpp
        class/usestock2.cpp
)
